[package]
name = "sandbox-runner"
version = "0.2.0"
edition = "2021"
description = "Cross-platform sandbox execution"
repository = "https://github.com/Watts-ai/linux-sandbox-runner"

[[bin]]
name = "sandbox-runner"
path = "src/main.rs"

[dependencies]
codex-linux-sandbox = { git = "https://github.com/openai/codex.git" }

[target.'cfg(target_os = "windows")'.dependencies]
codex-windows-sandbox = { git = "https://github.com/openai/codex.git" }
codex-core = { git = "https://github.com/openai/codex.git" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
